--- a/style.css
+++ b/style.css
@@ -1,15 +1,48 @@
 ﻿body {
-
+  padding: 20px 0 0 20px;
+}
+section {
+  float:left;
+  width: 25%;
+  border-right: 2px solid #00858C;
+  margin: 5px 80px 0 30px;
+  padding: 0 10px 20px 20px;
+}
+a {
+  color: #363636;
+  text-decoration: none;
+}
+a:hover {
+  color: #00858C;
+  text-decoration: underline;
 }
 #gameboard
 {
-	width: 150px;
+	width: 60%;
+  float: left;
 }
-h1 {
+h1 a {
+  opacity: 0.6;
   color: #00858C;
-  font-size: 3em;
+  font-size: 2.5em;
+  line-height: 1.1em;
+  text-decoration: none;
   font-family: 'Oldenburg', cursive;
 }
+h1 a span {
+  opacity: 0.5;
+  font-size: 2.2em;
+}
+p {
+  color: gray;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+}
 img {
-	border: none;
+	border: 1px solid silver;
+  margin-right: 5px;
+}
+.author {
+  font-size: 12px;
+  padding-top: 50px;
 }
