--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ section {
   width: 25%;
   border-right: 2px solid #00858C;
   margin: 5px 80px 0 30px;
-  padding: 0 10px 20px 20px;
+  padding: 0 0px 20px 20px;
 }
 a {
   color: #363636;
@@ -21,11 +21,14 @@ a:hover {
 	width: 60%;
   float: left;
 }
+h1 {
+  margin-bottom: 30px;
+}
 h1 a {
   opacity: 0.6;
   color: #00858C;
   font-size: 2.5em;
-  line-height: 1.1em;
+  line-height: 1.2em;
   text-decoration: none;
   font-family: 'Oldenburg', cursive;
 }
@@ -36,6 +39,7 @@ h1 a span {
 p {
   color: gray;
   font-size: 14px;
+  line-height: 1.5em;
   font-family: 'Open Sans', sans-serif;
 }
 img {
@@ -44,5 +48,5 @@ img {
 }
 .author {
   font-size: 12px;
-  padding-top: 50px;
+  padding-top: 100px;
 }
